--- a/AutoFeedbackWindows10.UI/HomePage.xaml
+++ b/AutoFeedbackWindows10.UI/HomePage.xaml
@@ -35,7 +35,7 @@
             <Button
                 Margin="0,15,50,0"
                 HorizontalAlignment="Stretch"
-                IsEnabled="False">
+                Click="btnWindow10_Click">
                 <StackPanel>
                     <FontIcon FontSize="50" Glyph="&#xF103;" />
                     <TextBlock
@@ -43,11 +43,12 @@
                         HorizontalAlignment="Center"
                         FontSize="20"
                         FontWeight="Bold"
-                        Text="Windows 10 Edition (New*)" />
+                        Text="Windows 10 Edition (New*)"
+                        TextWrapping="Wrap" />
                 </StackPanel>
             </Button>
 
-            <Button Margin="0,15,50,0" HorizontalAlignment="Stretch">
+            <Button Margin="0,15,50,0" HorizontalAlignment="Stretch" Click="btnLegacy_Click">
                 <StackPanel>
                     <FontIcon FontSize="50" Glyph="&#xF83E;" />
                     <TextBlock
@@ -55,7 +56,8 @@
                         HorizontalAlignment="Center"
                         FontSize="20"
                         FontWeight="Bold"
-                        Text="Windows XP / Vista / 7 / 8 / 10" />
+                        Text="Windows XP / Vista / 7 / 8 / 10"
+                        TextWrapping="Wrap" />
                 </StackPanel>
             </Button>
 
@@ -67,40 +69,64 @@
         </StackPanel>
 
         <Grid Grid.Column="1" Margin="0,25,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
             <TextBlock
                 HorizontalAlignment="Right"
                 Style="{StaticResource HeaderText}"
-                Text="FEATURE" />
-
-            <StackPanel
-                Margin="0,50"
-                HorizontalAlignment="Right"
-                Orientation="Horizontal">
-                <Button x:Name="btnBatchedMode" PointerEntered="Button_PointerEntered">
-                    <StackPanel>
-                        <FontIcon FontSize="50" Glyph="&#xECA5;" />
-                        <TextBlock FontSize="40" Text="Batched mode" />
-                    </StackPanel>
-                </Button>
-                <Button x:Name="btnManualMode" PointerEntered="Button_PointerEntered">
-                    <StackPanel>
-                        <FontIcon FontSize="50" Glyph="&#xECA5;" />
-                        <TextBlock FontSize="40" Text="Batched mode" />
-                    </StackPanel>
-                </Button>
-                <Button x:Name="btnCommingSoon" PointerEntered="Button_PointerEntered">
-                    <StackPanel>
-                        <FontIcon FontSize="50" Glyph="&#xECA5;" />
-                        <TextBlock FontSize="40" Text="Batched mode" />
-                    </StackPanel>
-                </Button>
-                <StackPanel.Transitions>
+                Text="FEATURES" />
+            <ListView
+                Grid.Row="1"
+                ItemsSource="{x:Bind Features}"
+                SelectionMode="None">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.ItemContainerTransitions>
                     <TransitionCollection>
-                        <EdgeUIThemeTransition Edge="Right" />
-                        <ContentThemeTransition />
+                        <EntranceThemeTransition FromVerticalOffset="200" IsStaggeringEnabled="True" />
                     </TransitionCollection>
-                </StackPanel.Transitions>
-            </StackPanel>
+                </ListView.ItemContainerTransitions>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Border Margin="0,12" Background="{ThemeResource SystemChromeMediumColor}">
+                            <Grid Margin="4,4,4,4">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="1*" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="1*" />
+                                </Grid.ColumnDefinitions>
+
+                                <FontIcon
+                                    Grid.RowSpan="2"
+                                    Margin="0,0,12,0"
+                                    FontSize="80"
+                                    Glyph="{Binding Glyph}" />
+
+                                <TextBlock
+                                    Grid.Column="1"
+                                    Margin="0,0,0,4"
+                                    Style="{StaticResource TitleTextBlockStyle}"
+                                    Text="{Binding Title}" />
+                                <TextBlock
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    Margin="4,0"
+                                    Style="{StaticResource BodyTextBlockStyle}"
+                                    Text="{Binding Detail}"
+                                    TextWrapping="Wrap" />
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
 
         <StackPanel
@@ -108,10 +134,7 @@
             Grid.Row="1"
             Grid.ColumnSpan="2"
             Margin="0,25,5,0">
-            <TextBlock
-                HorizontalAlignment="Right"
-                Style="{StaticResource HeaderText}"
-                Text="AUTHORS" />
+            <TextBlock Style="{StaticResource HeaderText}" Text="AUTHORS" />
 
             <ListView
                 ItemsSource="{x:Bind Contributors}"
